--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "laravel-mix": "^1.7.2"
     },
     "dependencies": {
+        "hoek": "^5.0.3",
         "sweetalert": "^2.1.0"
     }
 }
